--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,24 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    text-align: center;
 }
 
-#title{
+#title {
     background-color: #ff4c68;
     color: white;
+    text-align: left;
 }
 
 .container-fluid {
-        padding: 3% 15%;
+    padding: 3% 15%;
 }
 
-h1, h2, h3, h4, h5, h6{
-    font-family:'Montserrat', sans-serif;
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
 }
 
-h3{
+h3 {
     font-weight: bold;
 }
 
@@ -23,7 +26,7 @@ p {
     color: #8f8f8f;
 }
 
-.big-heading{
+.big-heading {
     font-size: 3.5rem;
     font-weight: 900;
     line-height: 1.5;
@@ -35,17 +38,17 @@ p {
     padding: 0 0 4.5rem;
 }
 
-.navbar-brand{
+.navbar-brand {
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
 }
 
-.nav-item{
+.nav-item {
     padding: 0 18px;
 }
 
-.nav-link{
+.nav-link {
     font-size: 1.2rem;
     font-family: 'Montserrat', sans-serif;
 }
@@ -64,15 +67,14 @@ p {
 }
 
 /* Features */
-#features{
+#features {
     padding: 7% 15%;
     background-color: #fff;
     position: relative;
-    
+
 }
 
 .feature-box {
-    text-align: center;
     padding: 5%;
 }
 
@@ -88,80 +90,72 @@ p {
 /* Testimonials */
 
 #testimonials {
-    
-    text-align: center;
     background-color: #ef8172;
     color: #fff;
 }
 
-.carousel-item{
+.carousel-item {
     padding: 7% 15%;
 }
 
-.testimonial-image{
+.testimonial-image {
     border-radius: 100%;
     width: 10%;
     margin: 20px;
 }
 
-#press{
+#press {
     background-color: #ef8172;
     padding-bottom: 3%;
     text-align: center;
 }
 
-.press-logo{
+.press-logo {
     width: 15%;
     margin: 20px 20px 50px;
 }
 
 /* Pricing Section */
 
-#pricing{
+#pricing {
     padding: 100px;
     text-align: center;
 }
+
 .pricing-column {
     padding: 3% 2%;
 }
 
 .price-text {
-    font-weight: bold;
+
     line-height: 1.5;
 }
 
-#cta{
-    
-    text-align: center;
+#cta {
     color: #fff;
     background-color: #ff4c68;
     padding: 7% 15%;
 
 }
- .cta-heading {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 3.5rem;
-    line-height: 1.5;
- }
-
- #footer{
-     padding: 7% 15%;
-     text-align: center;
- }
-
- .social-icon{
-     margin: 20px 10px;
- }
 
 
-@media (max-width: 1028px){
-    .title-image{
+#footer {
+    padding: 7% 15%;
+}
+
+.social-icon {
+    margin: 20px 10px;
+}
+
+
+@media (max-width: 1028px) {
+    .title-image {
         position: static;
         transform: rotate(0);
         width: 60%;
     }
-    #title{
+
+    #title {
         text-align: center;
     }
 }
